# EDAI_TUI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  doc.sh  pyproject.toml  raina_tui.bat  requirements-dev.txt  requirements.txt
doc/source/: commands.rst  conf.py  features.rst  getting_started.rst  index.rst  overview.rst  usage.rst
doc/source/_templates/: layout.html
doc/source/locale/pot/.doctrees/: commands.doctree  environment.pickle  features.doctree  getting_started.doctree  index.doctree  overview.doctree  usage.doctree
doc/source/locale/zh_CN/LC_MESSAGES/: commands.po  features.po  getting_started.po  index.po  overview.po  usage.po
src/edai/: __init__.py  __main__.py  backend.py
src/edai/agent/: __init__.py  base.py  context.py
src/edai/error/: __init__.py
src/edai/tool/: __init__.py  backend.py  base.py  builtin.py  interpreter.py  manager.py  repl.py  tcl_interpreter.py
src/edai/utils/: env.py
tests/: __init__.py  conftest.py  test_agent.py  test_backend.py  test_cli.py  test_repl.py  test_tool.py  test_version.py
