[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edai"
version = "0.1.0"
description = "A LLM-driven TUI for EDA tools"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "tanlinfeng" },
]
keywords = ["eda", "tui", "llm", "electronic-design-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    # LLM interaction
    "openai>=1.0.0",
    # Environment variable loading
    "python-dotenv>=1.0.0",
    # PTY-based subprocess interaction
    "pexpect>=4.8",
    # CLI framework
    # "rich>=13.0",
    # "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/tanlinfeng/EDAI_TUI"
Repository = "https://github.com/tanlinfeng/EDAI_TUI.git"
Documentation = "https://github.com/tanlinfeng/EDAI_TUI#readme"

[project.scripts]
edai = "edai.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["edai*"]

[tool.setuptools.package-data]
edai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
